--- a/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/WorkItemTypeCategoryMain.xaml
+++ b/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/WorkItemTypeCategoryMain.xaml
@@ -42,7 +42,8 @@
             <RowDefinition Height="*" />            
         </Grid.RowDefinitions>
 
-        <vncazdopv:CommonGridHeader x:Name="commonGridHeader" Grid.Row="0" />
+        <vncazdopv:CommonGridHeader x:Name="commonGridHeader" Grid.Row="0"  
+                                    Count="{Binding Results.Count, Mode=TwoWay}"/>
 
         <dxg:GridControl x:Name="grdResults" Grid.Row="2"
                     ItemsSource="{Binding Results.ResultItems}"
