--- a/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/WorkItemTypeFieldsMain.xaml
+++ b/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/WorkItemTypeFieldsMain.xaml
@@ -1,5 +1,5 @@
 ﻿<vncmvvm:ViewBase
-    x:Class="AZDORestApiExplorer.WorkItemTracking.Presentation.Views.WorkItemTypesFieldMain"
+    x:Class="AZDORestApiExplorer.WorkItemTracking.Presentation.Views.WorkItemTypeFieldsMain"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:prism="http://prismlibrary.com/"
