--- a/AZDORestApiExplorer/Presentation/Views/Areas/TestMain.xaml
+++ b/AZDORestApiExplorer/Presentation/Views/Areas/TestMain.xaml
@@ -57,9 +57,11 @@
         </dxlc:LayoutGroup>
 
         <dxlc:LayoutGroup Header="Test Cases" >
-            <Grid>
-                <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.TestCaseMainRegion}" />
-            </Grid>
+            <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.TestCaseMainRegion}" />
+        </dxlc:LayoutGroup>
+
+        <dxlc:LayoutGroup Header="Test Points" >
+            <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.TestPointMainRegion}" />
         </dxlc:LayoutGroup>
 
     </dxlc:LayoutGroup>
