--- a/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/ArtifactLinkTypeMain.xaml
+++ b/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/ArtifactLinkTypeMain.xaml
@@ -39,6 +39,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
+            <!--<RowDefinition Height="Auto" />-->            
         </Grid.RowDefinitions>
 
         <vncazdopv:CommonGridHeader x:Name="commonGridHeader" Grid.Row="0"  
@@ -51,11 +52,16 @@
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
+            
             <dxg:GridColumn FieldName="linkType" />
             <dxg:GridColumn FieldName="artifactType" />
             <dxg:GridColumn FieldName="toolType" />
+            
         </dxg:GridControl>
 
+        <!--<dxe:TextEdit Grid.Row="2" Text="{Binding Results.SelectedItem.url}"  
+                      TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto" />-->
+        
     </Grid>
     
 </vncmvvm:ViewBase>
