--- a/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/ClassificationNodeMain.xaml
+++ b/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/ClassificationNodeMain.xaml
@@ -40,7 +40,7 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
+            <!--<RowDefinition Height="*" />-->
         </Grid.RowDefinitions>
 
         <vncazdopv:CommonGridHeader x:Name="commonGridHeader" Grid.Row="0"  
@@ -54,43 +54,20 @@
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
 
-            <dxg:GridColumn FieldName="name" />
+            <dxg:GridColumn FieldName="name"  BestFitModeOnSourceChange="VisibleRows"/>
             <dxg:GridColumn FieldName="id" />
             <dxg:GridColumn FieldName="identifier" />
             <dxg:GridColumn FieldName="structureType" />
             <dxg:GridColumn FieldName="hasChildren" />
-            <dxg:GridColumn FieldName="path" />
-            <dxg:GridColumn FieldName="attributes" />
+            <dxg:GridColumn FieldName="path" BestFitModeOnSourceChange="VisibleRows"/>
+            <dxg:GridColumn FieldName="attributes.startDate" />
+            <dxg:GridColumn FieldName="attributes.finishDate" />
             <!--<dxg:GridColumn FieldName="url" />-->
         </dxg:GridControl>
 
         <dxe:TextEdit Grid.Row="2"
             Text="{Binding Results.SelectedItem.url}"
             TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto"/>
-
-        <Grid Grid.Row="3">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="Auto" />
-            </Grid.ColumnDefinitions>
-
-            <dxg:GridControl Grid.Column="0"
-                    ItemsSource="{Binding Results.SelectedItem.attributes}"
-                    ScrollViewer.CanContentScroll="True"
-                    ScrollViewer.HorizontalScrollBarVisibility="Auto"
-                    ScrollViewer.VerticalScrollBarVisibility="Auto">
-
-                <dxg:GridColumn FieldName="startDate" />
-                <dxg:GridColumn FieldName="finishDate" />
-
-            </dxg:GridControl>
-
-            <TextBlock Grid.Column="1" Text="{Binding Results.SelectedItem.attributes.startDate}" />
-
-        </Grid>
 
     </Grid>
 
