--- a/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/FieldMain.xaml
+++ b/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/FieldMain.xaml
@@ -55,8 +55,8 @@
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
 
-            <dxg:GridColumn FieldName="name" />
-            <dxg:GridColumn FieldName="referenceName" />
+            <dxg:GridColumn FieldName="name" BestFitModeOnSourceChange="VisibleRows" />
+            <dxg:GridColumn FieldName="referenceName" BestFitModeOnSourceChange="VisibleRows"/>
             <dxg:GridColumn FieldName="type" />
             <dxg:GridColumn FieldName="description" />
             <dxg:GridColumn FieldName="usage" />
@@ -74,28 +74,32 @@
         <dxe:TextEdit Grid.Row="2" Text="{Binding Results.SelectedItem.url}"  
                       TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto"/>
         
-        <Grid Grid.Row="3">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
-            
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="Auto" />
-            </Grid.ColumnDefinitions>
+        <dxlc:LayoutGroup 
+        	View="GroupBox" Orientation="Vertical" Grid.Row="3" Header="Supported Operations" >
+            <Grid >
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
 
-            <dxg:GridControl Grid.Column="0"
-                ItemsSource="{Binding Results.SelectedItem.supportedOperations}"
-                ScrollViewer.CanContentScroll="True"
-                ScrollViewer.HorizontalScrollBarVisibility="Auto"
-                ScrollViewer.VerticalScrollBarVisibility="Auto">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
 
-                <dxg:GridColumn FieldName="referenceName" />
-                <dxg:GridColumn FieldName="name" />
+                <dxg:GridControl Grid.Column="0"
+                    ItemsSource="{Binding Results.SelectedItem.supportedOperations}"
+                    ScrollViewer.CanContentScroll="True"
+                    ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                    ScrollViewer.VerticalScrollBarVisibility="Auto">
 
-            </dxg:GridControl>
+                    <dxg:GridColumn FieldName="referenceName" BestFitModeOnSourceChange="VisibleRows"/>
+                    <dxg:GridColumn FieldName="name" BestFitModeOnSourceChange="VisibleRows"/>
 
-        </Grid>
+                </dxg:GridControl>
+
+            </Grid>
+        </dxlc:LayoutGroup>
+
 
     </Grid>
     
