--- a/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/WorkItemRelationTypeMain.xaml
+++ b/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/WorkItemRelationTypeMain.xaml
@@ -24,7 +24,7 @@
     
     prism:ViewModelLocator.AutoWireViewModel="False"
     mc:Ignorable="d"
-    d:DesignHeight="450" d:DesignWidth="800"
+    d:DesignHeight="600" d:DesignWidth="800"
 >
     <d:DesignerProperties.DesignStyle>
         <Style TargetType="UserControl">
@@ -38,16 +38,15 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
-
-            <RowDefinition Height="*" />            
+            <RowDefinition Height="Auto" />
+            <!--<RowDefinition Height="*" />-->            
         </Grid.RowDefinitions>
 
         <vncazdopv:CommonGridHeader x:Name="commonGridHeader" Grid.Row="0"  
                                     Count="{Binding Results.Count, Mode=TwoWay}"/>
 
-        <dxg:GridControl x:Name="grdResults" Grid.Row="2"
+        <dxg:GridControl x:Name="grdResults" Grid.Row="1"
                     ItemsSource="{Binding Results.ResultItems}"
                     SelectedItem="{Binding Results.SelectedItem}"               
                     FontSize="12"
@@ -57,63 +56,23 @@
             
             <dxg:GridColumn FieldName="name" />
             <dxg:GridColumn FieldName="referenceName" />
-            <dxg:GridColumn FieldName="attributes"/>
+            <dxg:GridColumn Header="Usage" FieldName="attributes.usage" />
+            <dxg:GridColumn Header="Editable" FieldName="attributes.editable" />
+            <dxg:GridColumn Header="Enabled" FieldName="attributes.enabled" />
+            <dxg:GridColumn Header="Acyclic" FieldName="attributes.acyclic" />
+            <dxg:GridColumn Header="Directional" FieldName="attributes.directional" />
+            <dxg:GridColumn Header="SingleTarget" FieldName="attributes.singleTarget" />
+            <dxg:GridColumn Header="Topology" FieldName="attributes.topology" />
+            <dxg:GridColumn Header="Remote" FieldName="attributes.remote" />
+            <dxg:GridColumn Header="IsForward" FieldName="attributes.isForward" />
+            <dxg:GridColumn Header="OppositeEndReferenceName" FieldName="attributes.oppositeEndReferenceName" />
             <!--<dxg:GridColumn FieldName="url" />-->
         </dxg:GridControl>
 
-        <dxe:TextEdit Grid.Row="1" Text="{Binding Results.SelectedItem.url}"  
+        <dxe:TextEdit Grid.Row="2" Text="{Binding Results.SelectedItem.url}"  
                       TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto" />
 
-        <Grid Grid.Row="3">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="Auto" />
-            </Grid.ColumnDefinitions>
 
-            <!--<dxg:GridControl Grid.Column="0"
-                ItemsSource="{Binding WorkItemRelationTypes.SelectedItem.attributes, diag:PresentationTraceSources.TraceLevel=High}"
-                ScrollViewer.CanContentScroll="True"
-                ScrollViewer.HorizontalScrollBarVisibility="Auto"
-                ScrollViewer.VerticalScrollBarVisibility="Auto">
-
-                <dxg:GridColumn FieldName="usage" />
-                <dxg:GridColumn FieldName="editable" />
-                <dxg:GridColumn FieldName="enabled" />
-                <dxg:GridColumn FieldName="acyclic" />
-                <dxg:GridColumn FieldName="directional" />
-                <dxg:GridColumn FieldName="singleTarget" />
-                <dxg:GridColumn FieldName="topology" />
-                <dxg:GridColumn FieldName="remote" />
-                <dxg:GridColumn FieldName="isForward" />
-                <dxg:GridColumn FieldName="oppositeEndReferenceName" />
-
-            </dxg:GridControl>-->
-
-            <dxg:GridControl Grid.Column="0"
-                ItemsSource="{Binding AStuff, diag:PresentationTraceSources.TraceLevel=High}"
-                             AutoGenerateColumns="AddNew"
-                ScrollViewer.CanContentScroll="True"
-                ScrollViewer.HorizontalScrollBarVisibility="Auto"
-                ScrollViewer.VerticalScrollBarVisibility="Auto">
-
-                <!--<dxg:GridColumn FieldName="attributes.usage" />
-                <dxg:GridColumn FieldName="editable" />
-                <dxg:GridColumn FieldName="enabled" />
-                <dxg:GridColumn FieldName="acyclic" />
-                <dxg:GridColumn FieldName="directional" />
-                <dxg:GridColumn FieldName="singleTarget" />
-                <dxg:GridColumn FieldName="topology" />
-                <dxg:GridColumn FieldName="remote" />
-                <dxg:GridColumn FieldName="isForward" />
-                <dxg:GridColumn FieldName="oppositeEndReferenceName" />-->
-
-            </dxg:GridControl>
-
-        </Grid>
-        
     </Grid>
     
 </vncmvvm:ViewBase>
